# OctreeVisualizer

./: CMakeLists.txt  README.md  shell.nix
data/: points2.csv  points3.csv
include/: camera.h  keyboard.h  mesh.h  model.h  mouse.h  octree.h  point.h  pointProcessor.h  screen.h  shader.h
include/glad/: glad.h
include/models/: solidCube.hpp  wireframeCube.hpp
src/: camera.cpp  glad.c  keyboard.cpp  main.cpp  mesh.cpp  model.cpp  mouse.cpp  octree.cpp  screen.cpp  shader.cpp
